--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -21,5 +21,5 @@ collections:
       - {label: "Language", name: "lang", widget: "string", default: "en"}      
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
+      - {label: "Search Terms Covered", name: "terms", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
